# industrial-quality-anomaly-monitor

./: .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml
docs/: architecture.md  detector_comparison_protocol.md  project_context.md  project_status.md  running_detector_comparison.md  testing.md
examples/: robust_z_metrics.json
src/quality_monitor/: __init__.py  cli.py  comparison.py  data_generation.py  detectors.py  evaluation.py  pipeline.py  reporting.py
tests/: test_cli.py  test_compare_cli.py  test_comparison.py  test_data_generation.py  test_detectors.py  test_evaluation.py  test_pipeline.py
